--- a/EmotionsAI.ipynb
+++ b/EmotionsAI.ipynb
@@ -188,13 +188,13 @@
         "from tensorflow.keras.utils import plot_model\n",
         "from tensorflow.keras.callbacks import ReduceLROnPlateau, EarlyStopping, ModelCheckpoint, LearningRateScheduler\n",
         "from IPython.display import display\n",
-        "#from tensorflow.python.keras import * -> PARA LAS NUEVAS VERSIONES DE TF, HACE QUE NO FUNCIONE\n",
+        "#from tensorflow.python.keras import * -> FOR NEW VERSIONS OF TF, IT MAKES IT NOT WORK\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras import layers, optimizers\n",
         "from tensorflow.keras.applications.resnet50 import ResNet50\n",
         "from tensorflow.keras.layers import *\n",
         "from tensorflow.keras import backend as K\n",
-        "#from keras import optimizers -> PARA LAS NUEVAS VERSIONES DE TF, HACE QUE NO FUNCIONE\n",
+        "#from keras import optimizers -> FOR NEW VERSIONS OF TF, IT MAKES IT NOT WORK\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.model_selection import train_test_split\n",
         "from google.colab.patches import cv2_imshow"
@@ -1607,7 +1607,7 @@
         }
       ],
       "source": [
-        "# Veamos más imágenes en formato matricial\n",
+        "# Let's see more images in matrix format\n",
         "fig = plt.figure(figsize=(20, 20))\n",
         "\n",
         "for i in range(16):\n",
@@ -5726,7 +5726,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO4/+aAylPGsG9muXPORi6r",
+      "authorship_tag": "ABX9TyPmFJu8/ro3MziomtFBU2ur",
       "include_colab_link": true
     },
     "kernelspec": {
